Prevent table css styles from overlapping with UI element styles (e.g. UiCalendar).

--- a/docs-src/styles/tables.scss
+++ b/docs-src/styles/tables.scss
@@ -1,19 +1,3 @@
-// From Bootstrap: http://getbootstrap.com/customize/?id=e516e5d6e28288745392
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-    background-color: transparent;
-}
-
-td,
-th {
-    padding: 0;
-
-    &.fixed-width {
-        width: 144px;
-    }
-}
-
 caption {
     padding-top: rem(8px);
     padding-bottom: rem(8px);
@@ -21,14 +5,26 @@ caption {
     text-align: left;
 }
 
-th {
-    text-align: left;
-}
-
 .table {
     width: 100%;
     max-width: 100%;
     margin-bottom: rem(20px);
+    border-collapse: collapse;
+    border-spacing: 0;
+    background-color: transparent;
+}
+
+.table td,
+.table th {
+    padding: 0;
+
+    &.fixed-width {
+        width: 144px;
+    }
+}
+
+.table th {
+    text-align: left;
 }
 
 .table > thead > tr > th,
@@ -100,14 +96,14 @@ th {
     background-color: #f5f5f5;
 }
 
-table col[class*="col-"] {
+.table col[class*="col-"] {
     position: static;
     float: none;
     display: table-column;
 }
 
-table td[class*="col-"],
-table th[class*="col-"] {
+.table td[class*="col-"],
+.table th[class*="col-"] {
     position: static;
     float: none;
     display: table-cell;
